snl_compiler/tests/fixtures/syntax_errors/missing_then.snl
{错误3: if 条件后缺少 then}
program p
var
    integer x;
begin
    if x < 1
        write(x)
    else
        write(x)
    fi
end.
